# recursiveAdventures

./: CHANGELOG.md  LICENSE  fourmolu.yaml  recursiveAdventures.cabal  shell.nix
app/: Main.hs
